[tool.poetry]
name = "seatingnightmare"
version = "0.1.0"
description = ""
authors = ["zam <azamolot@tcd.je>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
tqdm = "^4.66.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
